<resources>
    <string name="app_name">Tutor Finder</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="s_per_month">per month</string>
    <string name="sign_out">Sign Out</string>
    <string name="student">Student</string>
    <string name="tutor">Tutor</string>
    <string name="your_name">Your Name</string>
    <string name="submit">Submit</string>
    <string name="rate">Rate</string>
    <string name="subjects">Subjects</string>
    <string name="km">km</string>
    <string name="search">Search</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="delete_account">Delete Account</string>
    <string name="reviews">Reviews</string>
    <string name="fee_structure">Fee Structure</string>
    <string name="about_me">About Me</string>
    <string name="review_count">0 reviews</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="login_to_sign_up">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="email">Email</string>
    <string name="or">or</string>
    <string name="google_sign_in">Google Sign In</string>
    <string name="google_log_in">Google Log In</string>
    <string name="forgot_password_q">Forgot Password?</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_back_e">Welcome Back!</string>
    <string name="welcome_message">Enter your credentials to continue</string>
    <string name="new_here_q">New Here?</string>
    <string name="sign_up_screen_message">Let\'s get you started with account creation</string>
    <string name="sign_up_to_log_in">Already have an account?</string>
    <string name="email_empty_warning">Email can\'t be empty!</string>
    <string name="password_empty_warning">Password can\'t be empty!</string>
    <string name="authentication_failed_warning">Authentication failed!</string>
    <string name="password_short_warning">Password must be 8 characters long!</string>
    <string name="password_format_warning">Password must contain digit, lowercase alphabet, uppercase alphabet, and a special character, without any spaces.</string>
    <string name="email_format_warning">Enter correct email address!</string>
    <string name="enter_your_email">Enter your email address</string>
    <string name="recovery_email_sent">Check email to recover password!</string>
    <string name="recovery_email_failed">Wasn\'t able to send recovery email to the given email address!</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="select_role_screen_heading">What describes you the best?</string>
    <string name="registration_just_few_more_steps">Just few more steps to get you registered</string>
    <string name="not">Not</string>
    <string name="set_profile_pic">Select a profile picture</string>
    <string name="age">Age</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="next">Next</string>
    <string name="basic_info">Basic Information</string>
    <string name="_0_km">0.0 km</string>
    <string name="location_collection_declaration">The app need access to your current location once to determine where you live.</string>
    <string name="rotate_slider_use">How far are you willing to travel from this location to reach your students?</string>
    <string name="ask_sub_to_teach">Which subjects you would like to teach?</string>
    <string name="ask_payment_tutor">How much would you charge?</string>
    <string name="curr">curr</string>
    <string name="per">per</string>
    <string name="add_subject">Add new subject</string>
    <string name="enter_subject">Enter a single subject</string>
    <string name="ok">Okay</string>
    <string name="disclamer_subject">Only add a single thing, without any space!</string>
    <string name="subject_space_warning">Entered value can\'t contain space.</string>
    <string name="subject_alpha_warning">Subject can\'t contain anything other than alphabets.</string>
    <string name="subject_already_warning">Subject is already selected.</string>
    <string name="optional_info">Optional Information</string>
    <string name="tell_us_about_you">Tell something about yourself for students</string>
    <string name="education">Educational qualifications</string>
    <string name="experience_you_have">Experience you have</string>
    <string name="gender_empty_error">Please select a gender.</string>
    <string name="name_empty_error">Please enter your name.</string>
    <string name="age_empty_error">Please enter your age.</string>
    <string name="distance_low_error">Please select at least 0.1 km.</string>
    <string name="subject_no_error">Please select at least one subject.</string>
    <string name="cost_no_error">Please enter your estimated charge.</string>
    <string name="profile_pic_error">Please select a profile pic.</string>
    <string name="cant_get_location">Problem finding your location. Please check your location settings.</string>
    <string name="s_per_hour">per hour</string>
    <string name="s_per_day">per day</string>
    <string name="experience">Experience</string>
    <string name="write_review">Write a review</string>
    <string name="add_review">Add Review</string>
    <string name="describe_experience">Describe your experience.</string>
    <string name="review">reviews</string>
    <string name="report">Report</string>
    <string name="helpful_q">Helpful?</string>

    <string-array name="per_array">
        <item>month</item>
        <item>day</item>
        <item>hour</item>
    </string-array>
</resources>