<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <EditText
        android:id="@+id/name"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:hint="@string/your_name"
        tools:text="@string/your_name"
        android:inputType="text"
        android:autofillHints="name"/>

    <EditText
        android:id="@+id/rate"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:hint="@string/rate"
        tools:text="@string/your_name"
        android:inputType="number"/>

    <EditText
        android:id="@+id/subjects"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:hint="@string/subjects"
        app:layout_constraintStart_toStartOf="@+id/rate"
        app:layout_constraintTop_toBottomOf="@+id/rate"
        tools:text="@string/your_name"
        android:inputType="text"/>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/submit"
        app:layout_constraintStart_toStartOf="@+id/subjects"
        app:layout_constraintTop_toBottomOf="@+id/subjects" />

</androidx.constraintlayout.widget.ConstraintLayout>