<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="64dp"
        android:text="@string/registration_just_few_more_steps"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="80dp"
        android:text="@string/select_role_screen_heading"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        android:layout_width="152dp"
        android:layout_height="152dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/student_icon"
        app:layout_constraintEnd_toStartOf="@+id/shapeableImageView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/student"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/student"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/shapeableImageView"
        app:layout_constraintStart_toStartOf="@+id/shapeableImageView"
        app:layout_constraintTop_toBottomOf="@+id/shapeableImageView" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView2"
        android:layout_width="152dp"
        android:layout_height="152dp"
        android:src="@drawable/tutor_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/shapeableImageView"
        app:layout_constraintTop_toTopOf="@+id/shapeableImageView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tutor"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/shapeableImageView2"
        app:layout_constraintStart_toStartOf="@+id/shapeableImageView2"
        app:layout_constraintTop_toBottomOf="@+id/shapeableImageView2" />

</androidx.constraintlayout.widget.ConstraintLayout>