<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:text="@string/location_collection_declaration"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="24dp"
        android:text="@string/rotate_slider_use"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView4" />

    <me.tankery.lib.circularseekbar.CircularSeekBar
        android:id="@+id/distance_slider"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginTop="32dp"
        app:cs_circle_stroke_width="8dp"
        app:cs_pointer_stroke_width="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView5" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profile_pic"
        android:layout_width="168dp"
        android:layout_height="168dp"
        android:tint="?colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/distance_slider"
        app:layout_constraintEnd_toEndOf="@+id/distance_slider"
        app:layout_constraintStart_toStartOf="@+id/distance_slider"
        app:layout_constraintTop_toTopOf="@+id/distance_slider" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/distance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/_0_km"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distance_slider"
        tools:text="@android:string/autofill" />

</androidx.constraintlayout.widget.ConstraintLayout>